chore: #889 remove some code smells, make code more robust Signed-off-by: Laurent Broudoux <laurent.broudoux@gmail.com>